--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdi/js": "^5.9.55",
+    "@mdi/react": "^1.5.0",
     "next": "^10.0.0",
+    "next-translate": "^1.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1"
   }
